Removed bandwidth log from makecsv
Updated readme and removed total bandwidth time measurements from
bridgetest and makecsv because we use pcap files to get a more accurate
idea of throughput.

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Prerequesites:
-#Python 2.7 and related packages
-apt install python python-pip
-pip install stem
+#Python 3 and related packages
+apt install python python-pip3
+pip3 install stem
 
 #obfs4 and tor
 apt install obfs4proxy tor torsocks
@@ -18,7 +18,7 @@ Add to crontab to run tests 4x a day:
 	0 */6 * * * cd ~/bridgetest && ./bridgetest.sh [SITENAME]
 
 Generate a CSV file from logs:
-	find log -name '*.log' | sort | ./makecsv > bridgetest.csv 2> bandwidth.csv
+	find log -name '*.log' | sort | ./makecsv > bridgetest.csv
 
 Make a graph:
 	Rscript graph.R bridgetest.csv
