--- a/README
+++ b/README
@@ -9,16 +9,19 @@ apt install obfs4proxy tor torsocks
 [SITENAME] is an arbitrary identifier for the probe site
 that you have to choose.
 
+[TYPE] is the type of probe test to be performed. Right not
+there is only one type: 'obfs4'.
+
 The bridge_lines.txt file should contain a list of bridges to test. Each line corresponds to a bridge and should be of the form:
         <nickname>,<bridge_line>
 where <bridge_line> is the line to go in the torrc file and is structured as follows:
         obfs4 <IP:Port> <FINGERPRINT> cert=<CERT> iat-mode=0
 
 Add to crontab to run tests 4x a day:
-	0 */6 * * * cd ~/bridgetest && ./bridgetest.sh [SITENAME]
+	0 */6 * * * cd ~/bridgetest && ./probetest.sh [TYPE] [SITENAME]
 
 Generate a CSV file from logs:
-	find log -name '*.log' | sort | ./makecsv > bridgetest.csv
+	find log -name '*.log' | sort | ./makecsv > obfs4test.csv
 
 Make a graph:
-	Rscript graph.R bridgetest.csv
+	Rscript graph.R obfs4test.csv
