--- a/README
+++ b/README
@@ -20,8 +20,12 @@ where <bridge_line> is the line to go in the torrc file and is structured as fol
 Add to crontab to run tests 4x a day:
 	0 */6 * * * cd ~/bridgetest && ./probetest.sh [TYPE] [SITENAME]
 
-Generate a CSV file from logs:
-	find log -name '*.log' | sort | ./makecsv > obfs4test.csv
+Analyze Tor bootstrap progress through obfs4 bridges from logs:
+	1. Make the CSV: find log -name '*.log' | sort | ./makecsv > obfs4test.csv
+	2. Plot the results: Rscript graph.R obfs4test.csv
 
-Make a graph:
-	Rscript graph.R obfs4test.csv
+Analyze obfs4 throughput from pcap files:
+    1. Adapt the variables CLIENT_TUPLE and SERVER_TUPLE in infer-throughput.py.
+    2. Run the script: python infer-throughput.py download.pcap > download.csv
+    3. Plot the results: Rscript plot-throughput.R download.csv    
+
