--- a/README
+++ b/README
@@ -20,12 +20,16 @@ where <bridge_line> is the line to go in the torrc file and is structured as fol
 Add to crontab to run tests 4x a day:
 	0 */6 * * * cd ~/bridgetest && ./probetest.sh [TYPE] [SITENAME]
 
-Analyze Tor bootstrap progress through obfs4 bridges from logs:
-	1. Make the CSV: find log -name '*.log' | sort | ./makecsv > obfs4test.csv
-	2. Plot the results: Rscript graph.R obfs4test.csv
+Analyze Tor bootstrap progress from logs:
+	1. Make the CSV: find log -name '*.log' | sort | ./makecsv > bootstrap.csv
+	2. Plot the results: Rscript graph.R bootstrap.csv
 
 Analyze obfs4 throughput from pcap files:
     1. Adapt the variables CLIENT_TUPLE and SERVER_TUPLE in infer-throughput.py.
     2. Run the script: python infer-throughput.py download.pcap > download.csv
     3. Plot the results: Rscript plot-throughput.R download.csv    
 
+Analyze snowflake throughput from pcap files:
+    1. Adapt the LOG_PATH variable in snowflake-throughput.py
+    2. Run the script: python snowflake-throughput.py > download.csv
+    3. Plot the results: Rscript snowflake-throughput.R download.csv    
