--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Prerequesites:
 #Python 3 and related packages
-apt install python python-pip3
+apt install python python3-pip
 pip3 install stem
 
 #obfs4 and tor
