--- a/README
+++ b/README
@@ -27,12 +27,12 @@ Add to crontab to run tests 4x a day:
 
 Analyze Tor bootstrap progress from logs:
 	1. Make the CSV: find log -name '*.log' | sort | ./makecsv > bootstrap.csv
-	2. Plot the results: Rscript graph.R bootstrap.csv
+	2. Plot the results: Rscript plot-bootstrap.R bootstrap.csv
 
 Analyze obfs4 throughput from pcap files:
     1. Adapt the variables CLIENT_TUPLE and SERVER_TUPLE in infer-throughput.py.
-    2. Run the script: python infer-throughput.py download.pcap > download.csv
-    3. Plot the results: Rscript plot-throughput.R download.csv    
+    2. Run the script: python obfs4-throughput.py download.pcap > download.csv
+    3. Plot the results: Rscript obfs4-throughput.R download.csv    
 
 Analyze snowflake throughput from pcap files:
     1. Plot the results: Rscript snowflake-throughput.R snowflake-throughput.csv
